# ara-registry-github-starter

./: .gitignore  README.md  ara-json.md  ara.schema.json  registry-api.md  security.md  vision.md
.github/workflows/: ci.yml  deploy-frontend.yml  process-publish-issue.yml  publish.yml
github-registry/: CONTRIBUTING.md  DEPLOYMENT.md  EXTERNALS-E2E-TEST.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  TESTING.md  pyproject.toml
github-registry-frontend/: ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  FEATURES.md  GETTING-STARTED.md  QUICKSTART.md  README.md  SUMMARY.md  build_static_api.py  run.sh
github-registry-frontend/api/: main.py
github-registry-frontend/static/: app.js  docs.html  docs.js  index.html  namespaces.html  namespaces.js  owner.html  owner.js  package.html  package.js  packages.html  packages.js  styles.css
github-registry-frontend/static/api/: packages.json  stats.json
github-registry/.github/workflows/: ci.yml  publish.yml
github-registry/examples/hello-agent/: ara.json
github-registry/examples/hello-agent/prompts/: system.md
github-registry/src/ara_github/: __init__.py  cli.py  client.py  external.py  http.py  index.py
lib/python/: README.md  pyproject.toml
lib/python/src/ara_ref/: __init__.py  cli.py  core.py  models.py
lib/rust/: Cargo.toml  README.md
lib/rust/src/: lib.rs  main.rs  models.rs
registry/: externals.json  index.json  ownership.json
