[project]
name = "ara-github"
version = "0.0.1"
description = "ARA registry CLI backed by GitHub native components"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "httpx>=0.27.0",
    "click>=8.0",
    "pydantic[email]>=2.0",
    "zstandard>=0.23.0",
]

[project.scripts]
ara = "ara_github.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ara_github"]
