[package]
name = "ara-ref"
version = "0.1.0"
edition = "2021"
description = "Reference library for ARA package manifests"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
once_cell = "1.0"
